--- a/package.json
+++ b/package.json
@@ -12,21 +12,14 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "socket.io": "^2.3.0",
     "node-roon-api": "github:roonlabs/node-roon-api",
     "node-roon-api-browse": "github:roonlabs/node-roon-api-browse",
     "node-roon-api-image": "github:roonlabs/node-roon-api-image",
     "node-roon-api-status": "github:roonlabs/node-roon-api-status",
-    "node-roon-api-transport": "github:roonlabs/node-roon-api-transport"
+    "node-roon-api-transport": "github:roonlabs/node-roon-api-transport",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-moment": "^4.1.0",
-    "vue-router": "^3.3.4",
-    "vue-socket.io": "^3.0.9",
-    "vuex": "^3.4.0",
     "@vue/cli-plugin-babel": "~4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
     "@vue/cli-plugin-pwa": "~4.4.6",
@@ -35,11 +28,19 @@
     "@vue/cli-service": "~4.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "core-js": "^3.6.5",
     "eslint": "^7.3.1",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^6.2.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "vue-template-compiler": "^2.6.11"
+    "register-service-worker": "^1.7.1",
+    "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
+    "vue-router": "^3.3.4",
+    "vue-socket.io": "^3.0.9",
+    "vue-template-compiler": "^2.6.11",
+    "vue2-touch-events": "^3.2.2",
+    "vuex": "^3.4.0"
   }
 }
